[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libml"
dynamic = ["version"]
description = "ML preprocessing library for sentiment analysis"
authors = [
    {name = "REMLA Team 14"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "nltk==3.8.1",
    "pandas==2.2.3",
    "numpy==1.26.4"
]

[project.urls]
Homepage = "https://github.com/remla25-team14/lib-ml"
Repository = "https://github.com/remla25-team14/lib-ml"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Enable setuptools-scm to derive version from Git tags
write_to = "src/libml/_version.py"